--- a/components/hero/hero.html
+++ b/components/hero/hero.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 
 <!--! Hero (Touhid)  -->
-<h1 style="text-align: center; background-color: rgb(143, 140, 140); height: 500px;">Hero</h1>
+
+<div class="left-hero">
+    <div class="left-hero-shield">
+        <h1 class="hero-title">Next generation digital banking</h1>
+        <p class="hero-para">Take your financial life online. Your Easybank account will be a one-stop-shop for spreading, saving, budgheting, investing, and much more.</p>
+        <button class="hero-btn gradient-btn">Request Invite</button>
+    </div>
+</div>
+
+<div class="right-hero">
+    <div class="background-image">
+
+        <div class="mockups"></div>
+    </div>
+</div>
