--- a/components/hero/_hero.scss
+++ b/components/hero/_hero.scss
@@ -1,1 +1,129 @@
-//! Hero
+#hero {
+    height: 800px;
+    width: 100%;
+    background-color: $very-light-gray;
+    display: flex;
+}
+
+//left part
+.left-hero {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+.left-hero-shield {
+    width: 75%;
+}
+.hero-title, .hero-para, .hero-btn {
+    margin: 30px 0;
+}
+
+.hero-title {
+    font-family: $font-family-base;
+    font-weight: $font-weight-light;
+    color: $dark-blue;
+    font-size: 3.2rem;
+}
+
+.hero-para {
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    color: $grayish-blue;
+}
+
+
+//right part
+.right-hero {
+    width: 60%;
+    height: 100%;
+    position: relative;
+}
+
+.background-image {
+    //image
+    background: url(/img/bg-intro-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: 150% 150%;
+    background-position:  left;
+    //div
+    height: 100%;
+    width: 100%;
+    z-index: 4;
+    //for mockups
+    display: flex;
+    justify-content: flex-end;
+}
+
+.mockups {
+    //image
+    background: url(/img/image-mockups.png);
+    background-repeat: no-repeat;
+    background-size: 820px 105%;
+    background-position: left;
+    //div
+    height: 120%;
+    width: 80%;
+    z-index: 5;
+    position: absolute;
+}
+
+
+// 3 4 5 6
+
+//Resposive
+
+@media only screen and (max-width: 985px){
+    //for upper part
+    #hero {
+        flex-direction: column-reverse;
+        height: 100%;
+    }
+    .left-hero, .right-hero {
+        width: 100%;
+    }
+    .right-hero {
+        height: 100vw;
+    }
+    
+
+    .background-image {
+        background: url(/img/bg-intro-mobile.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 110% 120%;
+    }
+
+    .mockups {
+        background-size: 80% 100%;
+        background-position: bottom;
+        //div
+        height: 92%;
+        width: 100%;
+        z-index: 5;
+        position: absolute;
+    }
+
+    //for lower part
+    .left-hero {
+        align-items: center;
+        justify-content: flex-start;
+    }
+    .left-hero-shield {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        height: 100%;
+        margin-bottom: 70px;
+    }
+    .hero-title {
+        font-size: 2.2rem;
+    }
+    .hero-title, .hero-para, .hero-btn {
+        margin: 10px 0;
+    }
+}
