--- a/css/styles.css
+++ b/css/styles.css
@@ -13,21 +13,38 @@ body {
 
 #header {
   width: 100%;
+  position: fixed;
+  z-index: 6;
+  height: 90px;
+  background: #ffffff;
 }
 
 #navbar {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 80px;
+  height: 90px;
   background: #ffffff;
+}
+
+#nav-logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #nav-logo:hover {
@@ -43,7 +60,7 @@ body {
 }
 
 .nav-links li {
-  height: 80px;
+  height: 90px;
   margin: 0px 12px;
   float: left;
 }
@@ -58,7 +75,7 @@ body {
   display: block;
   font-size: 1.125rem;
   color: #9698a6;
-  padding: 30px 5px;
+  padding: 35px 5px;
   font-family: "Public Sans", sans-serif;
   height: 80px;
 }
@@ -78,7 +95,7 @@ body {
   position: absolute;
   height: 40vh;
   width: 85vw;
-  top: 100px;
+  top: 110px;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -97,9 +114,9 @@ body {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   font-family: "Public Sans", sans-serif;
-  -webkit-box-shadow: 0px 50px 50px 5px rgba(0, 0, 0, 0.2);
-          box-shadow: 0px 50px 50px 5px rgba(0, 0, 0, 0.2);
-  z-index: 2;
+  -webkit-box-shadow: 0px 40px 150px 30px #2d314d;
+          box-shadow: 0px 40px 150px 30px #2d314d;
+  z-index: 6;
 }
 
 .nav-drawer a:hover {
@@ -151,7 +168,7 @@ body {
 
 /* End of header */
 /* RESPONSIVE  HEADER*/
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 985px) {
   /* Head */
   .nav-links, #nav-gradient-btn {
     display: none;
@@ -164,17 +181,152 @@ body {
   #hamburger {
     display: block;
   }
-  #navbar {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding: 0 25px;
+}
+
+#hero {
+  height: 800px;
+  width: 100%;
+  background-color: #fafafa;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.left-hero {
+  width: 40%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.left-hero-shield {
+  width: 75%;
+}
+
+.hero-title, .hero-para, .hero-btn {
+  margin: 30px 0;
+}
+
+.hero-title {
+  font-family: "Public Sans", sans-serif;
+  font-weight: 300;
+  color: #2d314d;
+  font-size: 3.2rem;
+}
+
+.hero-para {
+  font-family: "Public Sans", sans-serif;
+  font-size: 1.125rem;
+  color: #9698a6;
+}
+
+.right-hero {
+  width: 60%;
+  height: 100%;
+  position: relative;
+}
+
+.background-image {
+  background: url(/img/bg-intro-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 150% 150%;
+  background-position: left;
+  height: 100%;
+  width: 100%;
+  z-index: 4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.mockups {
+  background: url(/img/image-mockups.png);
+  background-repeat: no-repeat;
+  background-size: 820px 105%;
+  background-position: left;
+  height: 120%;
+  width: 80%;
+  z-index: 5;
+  position: absolute;
+}
+
+@media only screen and (max-width: 985px) {
+  #hero {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    height: 100%;
+  }
+  .left-hero, .right-hero {
+    width: 100%;
+  }
+  .right-hero {
+    height: 100vw;
+  }
+  .background-image {
+    background: url(/img/bg-intro-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 110% 120%;
+  }
+  .mockups {
+    background-size: 80% 100%;
+    background-position: bottom;
+    height: 92%;
+    width: 100%;
+    z-index: 5;
+    position: absolute;
+  }
+  .left-hero {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .left-hero-shield {
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 80%;
+    height: 100%;
+    margin-bottom: 70px;
+  }
+  .hero-title {
+    font-size: 2.2rem;
+  }
+  .hero-title, .hero-para, .hero-btn {
+    margin: 10px 0;
   }
 }
 
 #services {
   background-color: #f3f4f6;
-  z-index: -1;
+  z-index: 3;
   position: relative;
   line-height: 1.6;
 }
